--- a/.config
+++ b/.config
@@ -7632,6 +7632,7 @@ CONFIG_PACKAGE_bash=y
 # CONFIG_PACKAGE_borgbackup is not set
 # CONFIG_PACKAGE_bossa is not set
 # CONFIG_PACKAGE_bottlerocket is not set
+CONFIG_PACKAGE_bpi-r4-pwm-fan=m
 # CONFIG_PACKAGE_bsdiff is not set
 # CONFIG_PACKAGE_bspatch is not set
 # CONFIG_PACKAGE_bubblewrap is not set
