--- a/.config
+++ b/.config
@@ -152,6 +152,8 @@ CONFIG_PACKAGE_luci-nginx=y            # Nginx 前端引擎
 # CONFIG_PACKAGE_luci-app-zerotier=y    # ZeroTier 虚拟网络
 
 # 可安装模组
+# === appfilter ===
+CONFIG_PACKAGE_kmod-oaf=m
 # === bpi-r4-pwm-fan ===
 CONFIG_PACKAGE_bpi-r4-pwm-fan=m
 # === dae ===
